--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/publicidad/publicidad.component.css
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/publicidad/publicidad.component.css
@@ -4,3 +4,67 @@
   padding-bottom: 0.1rem;
   width: 100%;
 }
+
+.table {
+  width: 75%;
+  margin-left: 10%;
+  margin-top: 3%;
+}
+
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.publicidad {
+  margin-top: 2%; 
+}
+
+.item {
+  height: 100%;
+  border-style: double;
+  border-color: black;
+}
+
+.combobox {
+  margin-top: 2%;
+  margin-bottom: 1%;
+}
+
+.read_more {
+  font-size: 17px;
+  background-color: #0f1521;
+  color: #fff;
+  padding: 8px 0px;
+  width: 100%;
+  max-width: 144px;
+  text-align: center;
+  display: inline-block;
+  transition: ease-in all 0.5s;
+  font-weight: 500;
+  border-radius: 30px;
+}
+
+.read_more:hover {
+  background: #1ddd7d;
+  color: #fff;
+  transition: ease-in all 0.5s;
+}
+
+.cancel:hover {
+  background: #fe0000;
+  color: #fff;
+  transition: ease-in all 0.5s;
+}
+
+.deleteTabla{
+  font-size: 24px;
+  color: #fe0000;
+}
+
+.updateTabla{
+  font-size: 24px;
+  color: blue;
+}
