--- a/frontend/Admin-HotelCocoMilk/src/app/core/componentes/ver-habitacion/ver-habitacion.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/core/componentes/ver-habitacion/ver-habitacion.component.html
@@ -14,7 +14,7 @@
                     <p>{{tipoHabitacion.informacion}}</p>
                 </div>
                 <div class="d-flex flex-row">
-                    <figure><img [src]="'assets/images/' + tipoHabitacion.imagen" alt="#" /></figure>
+                    <figure><img id="previewShowImage" src="" width="100" height="100" alt="#"/></figure>
                 </div>
             </div>
         </div>
