--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/publicidad/publicidad.component.css
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/publicidad/publicidad.component.css
@@ -98,3 +98,11 @@ img {
   font-size: 24px;
   color: blue;
 }
+
+.imagen {
+  width: 100%;
+  vertical-align: top;
+  height: 200px;
+  object-fit: cover;
+  transition: transform 0.5s;
+}
