Menu modificar paginas y navegación

--- a/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.css
+++ b/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.css
@@ -29,3 +29,7 @@
 .sidebar .nav-item .nav-link:hover{
 	color: rgb(9, 48, 244);
 }
+
+.sidebar .nav-item .dropdown-menu .dropdown-item:hover{
+	color: rgb(9, 48, 244);
+}
