--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-facilidades/modificar-facilidades.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-facilidades/modificar-facilidades.component.html
@@ -1,3 +1,6 @@
 <div class="title">
   <h2 style="color: white; padding-top: 5px;"> Modificar Paginas</h2>
 </div>
+<div>
+  <h3 class="ml-3 mt-2">Facilidades</h3>
+</div>
