--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-home/modificar-home.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-home/modificar-home.component.html
@@ -4,3 +4,50 @@
 <div>
   <h3 class="ml-3 mt-2">Home</h3>
 </div>
+<div class="row">
+    <div class="col-md-12 form-group mt-3 test2">
+      <textarea class="form-control pb-5" [(ngModel)]="dataHome.descripcion"></textarea>
+    </div>
+
+    <div class="col-md-12">
+      <div class="row">
+
+        <div class="col-md-2">
+
+        </div>
+        <div class="col-md-4"> <!--d-flex flex-col-->
+          <div class="row"> 
+            <div class="col-md-12">
+              <label for="tarifa">Modificar Imagen:</label>
+            </div>
+            <div class="col-md-12">
+              <input id="formFileLg" class="ml-3" (change)="obtenerImagen($event)" 
+              type="file" accept="image/png, .jpeg, .jpg, image/gif"/> <!--class="form-control form-control-lg ml-2 mt-3"-->
+            </div>
+              <div class="col-md-12 alert alert-light" role="alert">
+                {{respuesta}}
+              </div>
+        </div>
+        </div>
+    
+        <div class="col-md-4 imagen">
+          <figure>
+            <img id="preview" src="" width="100" height="100" alt="#"/>
+           </figure> 
+        </div>
+
+       <div class="col-md-2">
+          
+       </div>
+
+       
+
+      </div>
+    </div>
+
+    <div class="col-md-12">
+      <button type="button" class="btn" (click)="guardarModificacion()">Guardar</button>
+      <button type="button" class="btn cancel">Cancelar</button>
+    </div>
+
+</div>
