--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-home/modificar-home.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-home/modificar-home.component.html
@@ -16,12 +16,12 @@
 
         </div>
         <div class="col-md-4"> <!--d-flex flex-col-->
-          <div class="row"> 
+          <div class="row">
             <div class="col-md-12">
               <label for="tarifa">Modificar Imagen:</label>
             </div>
             <div class="col-md-12">
-              <input id="formFileLg" class="ml-3" (change)="obtenerImagen($event)" 
+              <input id="formFileLg" class="ml-3" (change)="obtenerImagen($event)"
               type="file" accept="image/png, .jpeg, .jpg, image/gif"/> <!--class="form-control form-control-lg ml-2 mt-3"-->
             </div>
               <div class="col-md-12 alert alert-light" role="alert">
@@ -29,25 +29,24 @@
               </div>
         </div>
         </div>
-    
+
         <div class="col-md-4 imagen">
           <figure>
             <img id="preview" src="" width="100" height="100" alt="#"/>
-           </figure> 
+           </figure>
         </div>
 
        <div class="col-md-2">
-          
+
        </div>
 
-       
+
 
       </div>
     </div>
 
-    <div class="col-md-12">
+    <div class="col-md-12" style="display: flex; justify-content: center;">
       <button type="button" class="btn" (click)="guardarModificacion()">Guardar</button>
-      <button type="button" class="btn cancel">Cancelar</button>
     </div>
 
 </div>
