Recarga cuando se elimina y actualiza una publicidad

--- a/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/core/componentes/menu/menu.component.html
@@ -12,7 +12,7 @@
                   <a class="dropdown-item" routerLink="/home/modificar_home">Home</a>
                   <a class="dropdown-item" routerLink="/home/modificar_nosotros">Sobre Nosotros</a>
                   <a class="dropdown-item" routerLink="/home/modificar_facilidades">Facilidades</a>
-                  <a class="dropdown-item" routerLink="/home/modificar_como_llegar">Como llegar</a>
+                  <a class="dropdown-item" routerLink="/home/modificar_como_llegar">¿Cómo Llegar?</a>
                 </div>
 
             </li>
