--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-nosotros/modificar-nosotros.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-nosotros/modificar-nosotros.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-  <h2 style="color: white; padding-top: 5px;"> Modificar Paginas</h2>
+  <h2 style="color: white; padding-top: 5px;">Modificar Páginas</h2>
 </div>
 <div>
   <h3 class="ml-3 mt-2">Sobre Nosotros</h3>
