--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/publicidad/publicidad.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/publicidad/publicidad.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <section>
-  <app-modificar-publicidad [publicidad]="publicidadModificar"></app-modificar-publicidad>
+  <app-modificar-publicidad [publicidad]="publicidadModificar" (eventoHijo)="onMensajeHijo($event)"></app-modificar-publicidad>
   <div class="col-md-12">
       <div class="row">
           <div class="col-md-3 combobox"></div>
