--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-nosotros/modificar-nosotros.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-nosotros/modificar-nosotros.component.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 <div class="mt-5 ml-2">
-  <h5>Galeria</h5>
+  <h5>Galería</h5>
   <div class="row ml-2">
     <div class=""> <!--d-flex flex-col-->
       <figure>
