--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/bienvenida-home/bienvenida-home.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/bienvenida-home/bienvenida-home.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-  <h2 style="color: white; padding-top: 5px;"> Bienvenido</h2>
+  <h2 style="color: white; padding-top: 5px;">Bienvenido</h2>
 </div>
 
 <div class="row">
@@ -9,7 +9,7 @@
   <div class="col-md-6">
     <section class="TextoPrincipal">
       <h1>Hotel CocoMilk</h1>
-      <h3>Módulo administrativo</h3>
+      <h3>Módulo Administrativo</h3>
       <p>El módulo de administración de nuestro hotel es una herramienta integral que permite
         a los gerentes supervisar todas las operaciones diarias del hotel.</p>
     </section>
