--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/login/login/login.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/login/login/login.component.html
@@ -1,39 +1,34 @@
 
 <body>
-
-<div class="box-form">
-	<div class="left">
-		<div class="overlay">
-		<h1>Hotel Coco Milk</h1>
-			<p>El módulo de administración de nuestro hotel es una herramienta integral que permite <br>
+	<div class="box-form">
+		<div class="left">
+			<div class="overlay">
+			<h1>Hotel Coco Milk</h1>
+				<p>El módulo de administración de nuestro hotel es una herramienta integral que permite <br>
 				a los gerentes supervisar todas las operaciones diarias del hotel.</p>
-
+			</div>
 		</div>
-	</div>
-
 
 		<div class="right">
-						<div class="titulo">
-							<h5>Login</h5>
-						</div>
-						<div>
-							<p>El acceso a esta área está restringido únicamente para los administradores del sistema. <br>
-								Si requieres acceso a estos recursos, por favor comunícate con la administración.</p>
-						</div>
-							<form ngNativeValidate id="request" class="main_form" (ngSubmit)="buttonInicioSesion()" #contactForm="ngForm">
-							<div class="inputs">
-							  <input type="text" name="nombre" [(ngModel)]="nombre" placeholder="Nombre de Usuario" required>
-							  <br>
-							  <input type="password" name="contra" [(ngModel)]="contra" placeholder="Contraseña" required>
-							</div>
-							<br>
-							<span *ngIf="error" class="spanError">El nombre de usuario o la contraseña son incorrectos.</span>
-							<br><br>
-							<button type="submit">Ingresar</button>
-						  </form>
+			<div class="titulo">
+				<h5>Login</h5>
+			</div>
+			<div>
+				<p>El acceso a esta área está restringido únicamente para los administradores del sistema. <br>
+					Si requieres acceso a estos recursos, por favor comunícate con la administración.
+				</p>
+			</div>
+			<form ngNativeValidate id="request" class="main_form" (ngSubmit)="buttonInicioSesion()" #contactForm="ngForm">
+				<div class="inputs">
+					<input type="text" name="nombre" [(ngModel)]="nombre" placeholder="Nombre de Usuario" required>
+					<br>
+					<input type="password" name="contra" [(ngModel)]="contra" placeholder="Contraseña" required>
+				</div>
+				<br>
+				<span *ngIf="error" class="spanError">El nombre de usuario o la contraseña son incorrectos.</span>
+				<br><br>
+				<button type="submit">Ingresar</button>
+			</form>
+		</div>
 	</div>
-
-</div>
-
-
 </body>
