--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/reservacion/reservacion.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/reservacion/reservacion.component.html
@@ -15,7 +15,7 @@
         <th scope="col">Fecha Llegada</th>
         <th scope="col">Fecha Salida</th>
         <th scope="col">Tipo</th>
-        <th scope="col">Aciones</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody *ngFor="let reserva of dataReserva">
