--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/disponibilidad-habitacion/disponibilidad-habitacion.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/disponibilidad-habitacion/disponibilidad-habitacion.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-  <h2 style="color: white; padding-top: 5px;"> Disponibilidad de Habitaciones</h2>
+  <h2 style="color: white; padding-top: 5px;">Disponibilidad de Habitaciones</h2>
 </div>
 
 <section>
@@ -54,8 +54,8 @@
 <table class="table" id="dataTable">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Número de habitación</th>
-      <th scope="col">Tipo de habitación</th>
+      <th scope="col">Número de Habitación</th>
+      <th scope="col">Tipo de Habitación</th>
       <th scope="col">Costo Estadía</th>
     </tr>
   </thead>
