--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-como-llegar/modificar-como-llegar.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-como-llegar/modificar-como-llegar.component.html
@@ -1,8 +1,8 @@
 <div class="title">
-  <h2 style="color: white; padding-top: 5px;"> Modificar Páginas</h2>
+  <h2 style="color: white; padding-top: 5px;">Modificar Páginas</h2>
 </div>
 <div>
-  <h3 class="ml-3 mt-2">Como Llegar</h3>
+  <h3 class="ml-3 mt-2">¿Cómo Llegar?</h3>
 </div>
 <div class="row">
   <div class="col-md-12 form-group mt-3 text">
