--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-home/modificar-home.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-home/modificar-home.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-  <h2 style="color: white; padding-top: 5px;"> Modificar Páginas</h2>
+  <h2 style="color: white; padding-top: 5px;">Modificar Páginas</h2>
 </div>
 <div>
   <h3 class="ml-3 mt-2">Home</h3>
@@ -15,7 +15,7 @@
         <div class="col-md-2">
 
         </div>
-        <div class="col-md-4"> <!--d-flex flex-col-->
+        <div class="col-md-4">
           <div class="row">
             <div class="col-md-12">
               <label for="tarifa">Modificar Imagen:</label>
@@ -37,10 +37,7 @@
         </div>
 
        <div class="col-md-2">
-
        </div>
-
-
 
       </div>
     </div>
