--- a/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-nosotros/modificar-nosotros.component.html
+++ b/frontend/Admin-HotelCocoMilk/src/app/paginas/modificar-nosotros/modificar-nosotros.component.html
@@ -15,7 +15,7 @@
 <div class="mt-5 ml-2">
   <h5>Galería</h5>
   <div class="row ml-2">
-    <div class=""> <!--d-flex flex-col-->
+    <div class=""> 
       <figure>
         <img id="preview" src="assets/images/vacio.png" width="120" height="120" alt="#" />
       </figure>
@@ -40,7 +40,7 @@
           <th scope="col">Imagen</th>
           <th scope="col">Id</th>
           <th scope="col">Nombre</th>
-          <th scope="col">Aciones</th>
+          <th scope="col">Acciones</th>
         </tr>
       </thead>
       <tbody *ngFor="let imagen of dataGaleria">
@@ -53,10 +53,7 @@
           <td>{{imagen.id}}</td>
           <td>{{imagen.nombre}}</td>
           <td>
-            <button class="btn btn; mdi mdi-delete deleteTabla" (click)="eliminarImagenGaleria(imagen)"> <!--class="btn cancel" type="button" 
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
-                <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
-              </svg>-->
+            <button class="btn btn; mdi mdi-delete deleteTabla" (click)="eliminarImagenGaleria(imagen)">
             </button>
           </td>
         </tr>
